--- a/totalaudit-test.properties
+++ b/totalaudit-test.properties
@@ -12,4 +12,4 @@ spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.aop.auto=true
 mybatis.mapper-locations=classpath*:mybatis/mapper-*.xml
-mybatis.typeAliasesPackage=com.jk.zc.bean
+mybatis.typeAliasesPackage=com.jk.bean
