--- a/total-test.properties
+++ b/total-test.properties
@@ -11,5 +11,6 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.aop.auto=true
-mybatis.mapper-locations=classpath*:mybatis/mapper-*.xml
+#mybatis.mapper-locations=classpath*:mybatis/mapper-*.xml
 mybatis.typeAliasesPackage=com.jk.bean
+mybatis.config-location:classpath:mybatis/mapper-*.xml
