--- a/user-test.properties
+++ b/user-test.properties
@@ -11,5 +11,7 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.aop.auto=true
+spring.mvc.view.prefix=/WEB-INF/
+spring.mvc.view.suffix=.jsp
 mybatis.mapper-locations=classpath*:mybatis/mapper-*.xml
 mybatis.typeAliasesPackage=com.jk.bean
